--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "crypto-js": "^4.2.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "mongoose": "^4.10.8"
+    "mongoose": "^4.10.8",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.201"
   }
 }
