--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ jobs:
     uses: studiographene/github-action-workflows/.github/workflows/nodejs-ci.yml@feature/PX-1850 # if you want alternatively pin to tag version version
     secrets: inherit
     with:
-      package_manager: pnpm
-      build_command: pnpm run build
-      lint_command: pnpm run lint
+      package_manager: npm
+      build_command: npm run build
+      lint_command: npm run lint
       excluded_jobs: docker
       test_coverage_report_directory: coverage
       run_dev_test: true
